; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_add_subtitle.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_preset.c_add_subtitle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"Track\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"Default\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"Forced\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"Burn\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"Name\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32, i8*)* @add_subtitle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_subtitle(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %14 = call i32* (...) @hb_dict_init()
  store i32* %14, i32** %13, align 8
  %15 = load i32*, i32** %13, align 8
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @hb_dict_set_int(i32* %15, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32*, i32** %13, align 8
  %19 = load i32, i32* %9, align 4
  %20 = call i32 @hb_dict_set_bool(i32* %18, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %13, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @hb_dict_set_bool(i32* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i32 %22)
  %24 = load i32*, i32** %13, align 8
  %25 = load i32, i32* %11, align 4
  %26 = call i32 @hb_dict_set_bool(i32* %24, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i32 %25)
  %27 = load i8*, i8** %12, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %29, label %39

29:                                               ; preds = %6
  %30 = load i8*, i8** %12, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 0
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %29
  %36 = load i32*, i32** %13, align 8
  %37 = load i8*, i8** %12, align 8
  %38 = call i32 @hb_dict_set_string(i32* %36, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8* %37)
  br label %39

39:                                               ; preds = %35, %29, %6
  %40 = load i32*, i32** %7, align 8
  %41 = load i32*, i32** %13, align 8
  %42 = call i32 @hb_value_array_append(i32* %40, i32* %41)
  ret void
}

declare dso_local i32* @hb_dict_init(...) #1

declare dso_local i32 @hb_dict_set_int(i32*, i8*, i32) #1

declare dso_local i32 @hb_dict_set_bool(i32*, i8*, i32) #1

declare dso_local i32 @hb_dict_set_string(i32*, i8*, i8*) #1

declare dso_local i32 @hb_value_array_append(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
